--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Hubspot</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/0d2fc9df0b.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <nav class="top">
@@ -12,7 +13,7 @@
                 <div class="nav-inner-left">
                     <i class="fas fa-globe-stand"></i>
                     <span class="p1">English</span>
-                    <span class="p1">Contact Us</span>
+                    <span class="p2">Contact Us</span>
                 </div>
                 <div class="nav-inner-right">
                     <button class="log" type="button" name="log">Log In</button>
@@ -32,10 +33,10 @@
                 </ul>
             </div>
         </header>
-        <section>
+        <section class="blue">
             <div class="section-inner">
                 <div class="section-inner-left">
-                    <p>
+                    <p id="section-p">
                        Always easy. Now deeply powerful. We've packed even more enterprise features into
                        HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.
                     </p>
@@ -59,10 +60,22 @@
                     </div>
                     <div class="container-bottom">
                         <button class="get2 "type="button" name="get2">Get HubSpot free</button>
-                        <p>Get started with FREE tools, and upgrade as you grow.</p>
+                        <p>Get started with FREE tools, and<br>upgrade as you grow.</p>
                     </div>
                 </div>
             </div>
         </main>
+        <section class="alone">
+            <div class="alone-inner">
+                <img class="rubik "src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png" alt="rubik">
+                <h2 class="powerful">Powerful alone. Better together.</h2>
+                <p id="offers">
+                HubSpot offers a full stack of software for marketing, sales, and customer service,
+                with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
+            </div>
+        </section>
+
+
+
     </body>
 </html>
