There is still a long way to go ... Never give up!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <span class="p2">Contact Us</span>
                 </div>
                 <div class="nav-inner-right">
+                    <input class="search" type="search" name="search" value="">
                     <button class="log" type="button" name="log">Log In</button>
                     <button class="get" type="button" name="get">Get HubSpot free</button>
                 </div>
@@ -74,8 +75,29 @@
                 with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
             </div>
         </section>
+        <section class="cards">
+            <div class="cards-inner">
+                <div class="cardtop clearfix">
+                    <div class="info-top">
+                        <img class="book" src="https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg" alt="book">
+                        <button class="get2" type="button" name="get">Get free CRM</button>
+                    </div>
+                    <div class="text-top">
+                        <h4 id="CRM">Free HubSpot CRM</h4>
+                        <p id="text-p">Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+                        <p id="popular"><b>Popular Features</b></p>
+                    </div>
+                </div>
+                <div class="card1">
 
+                </div>
+                <div class="card2">
 
+                </div>
+                <div class="card3">
 
+                </div>
+            </div>
+        </section>
     </body>
 </html>
