--- a/index.html
+++ b/index.html
@@ -76,26 +76,106 @@
             </div>
         </section>
         <section class="cards">
-            <div class="cards-inner">
-                <div class="cardtop clearfix">
+            <div class="cards-inner clearfix">
+                <div class="cardtop">
                     <div class="info-top">
                         <img class="book" src="https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg" alt="book">
-                        <button class="get2" type="button" name="get">Get free CRM</button>
+                        <button class="get3" type="button" name="get">Get free CRM</button>
                     </div>
                     <div class="text-top">
-                        <h4 id="CRM">Free HubSpot CRM</h4>
+                        <h4 id="crm">Free HubSpot CRM</h4>
                         <p id="text-p">Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
                         <p id="popular"><b>Popular Features</b></p>
+                        <ul class="pop-list clearfix">
+                            <li>Contact Insights</li>
+                            <li>Deals</li>
+                            <li>Tasks</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card1">
-
+                    <img class="img-cards" src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="marketing">
+                    <h4 class="h-card">Marketing Hub</h4>
+                    <p class="p-card">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                    <p class="p2-card">POPULAR FEATURES</p>
+                    <ul class="cards-list">
+                        <li>Lead Generation</li>
+                        <li>Marketing Automation</li>
+                        <li>Analytics</li>
+                    </ul>
+                    <button class="start" type="button" name="start">Get started</button>
                 </div>
                 <div class="card2">
-
+                    <img class="img-cards" src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Sales-Professional-Illustration.svg" alt="sales">
+                    <h4 class="h-card">Sales Hub</h4>
+                    <p class="p-card">Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                    <p class="p2-card">POPULAR FEATURES</p>
+                    <ul class="cards-list">
+                        <li>Email Tracking</li>
+                        <li>Meeting Scheduling</li>
+                        <li>Email Automation</li>
+                    </ul>
+                    <button class="start" type="button" name="start">Get started</button>
                 </div>
                 <div class="card3">
-
+                    <img class="img-cards" src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Service-Hub-Illustration.svg" alt="service">
+                    <h4 class="h-card">Service Hub</h4>
+                    <p class="p-card">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+                    <p class="p2-card">POPULAR FEATURES</p>
+                    <ul class="cards-list">
+                        <li>Tickets</li>
+                        <li>Customer Feedback</li>
+                        <li>Knowledge Base</li>
+                    </ul>
+                    <button class="start" type="button" name="start">Get started</button>
+                </div>
+            </div>
+        </section>
+        <section class="community">
+            <div class="community-inner clearfix">
+                <h2 class="h-comm">Learn and grow with award-winning support and a thriving community behind you.</h2>
+                <p class="p-comm">You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+                <div class="community-board">
+                    <div class="community-box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="user">
+                        <h2>150</h2>
+                        <p>HubSpot user groups</p>
+                    </div>
+                    <div class="community-box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="blog">
+                        <h2>7M</h2>
+                        <p>monthly visits</p>
+                    </div>
+                    <div class="community-box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="academy">
+                        <h2>200K</h2>
+                        <p>certified professionals</p>
+                    </div>
+                    <div class="community-box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="inbound">
+                        <h2>26K</h2>
+                        <p>registered attendees</p>
+                    </div>
+                    <div class="community-box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_connect.svg" alt="connect">
+                        <h2>350</h2>
+                        <p>integrations</p>
+                    </div>
+                    <div class="community-box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="languages">
+                        <h2>6</h2>
+                        <p>languages</p>
+                    </div>
+                    <div class="community-box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="followers">
+                        <h2>2.6M</h2>
+                        <p>social followers</p>
+                    </div>
+                    <div class="community-box">
+                        <img src="https://www.hubspot.com/hubfs/growthhub-white-small-1.svg" alt="growth">
+                        <h2>5K</h2>
+                        <p>profiles and counting</p>
+                    </div>
                 </div>
             </div>
         </section>
